--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
               <div class="content d-flex flex-column justify-content-center">
                 <h3>Hello and welcome to my portfolio.</h3>
                 <p>
-                  💻JavaScript Programmer + Full Stack Developer + Web Developer Back-end, Front-end & Mechanical
+                  💻 JavaScript Programmer + Fullstack Developer + Web Developer Back-end, Front-end & Mechanical
                   engineer 🔩
                 </p>
                 <p>
@@ -109,9 +109,8 @@
                 </p>
                 <p>I would like to have the opportunity to continue developing professionally in the developing sector,
                   learn new technologies and face new challenges that will make me grow.</p>
-                <p>📍 In search of a professional challenge where to contribute, grow, ready to be junior full-stack
-                  developer
-                  and with relocation possibilities. 💺</p>
+                <p>📍 In search of a professional challenge where to contribute, grow, ready to be fullstack junior
+                  developer and with relocation possibilities. 💺</p>
                 <div class="row">
                   <div class="col-md-6 d-md-flex align-items-md-stretch">
                     <div class="count-box">
@@ -267,7 +266,7 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Bootcamp BKK &amp; Full Stack Developer Javascript</h4>
+              <h4>Bootcamp BKK &amp; Fullstack Developer Javascript</h4>
               <h5>01/2021 - 03/2021</h5>
               <p><em>Code4jobs, Bilbao, BC</em></p>
               <p>🟩 Bootcamp, intensive course based on MERN stack technologies. </p>
@@ -307,7 +306,7 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Full Stack Developer</h4>
+              <h4>Fullstack Developer</h4>
               <h5>02/2021 - 03/2021</h5>
               <p><em>AcceXible, Bilbao, BC</em></p>
               <p>🟩 Bootcamp Final Challenge Project</p>
@@ -352,6 +351,16 @@
           </div>
         </div>
 
+        <div class="downloadCV">
+          <a href="../CV_Sergio_Martinez_Programador.pdf" download="CV_Sergio_Martinez_Programador" target="_blank">
+            <img class="imgCvSpa"
+              src="https://img.shields.io/badge/Download-Full_CV_Sergio_M.C.(SPANISH)-1EABE2?style=for-the-badge&labelColor=181717"
+              alt="CV spanish download tag"></a>
+          <!-- <a  href="" download="CV_Sergio_Martinez_Developer" target="_blank">
+            <img class="imgCvEng"
+              src="https://img.shields.io/badge/Download-Full_CV_Sergio_M.C.(ENGLISH)-1EABE2?style=for-the-badge&labelColor=181717"
+              alt="CV english download tag"></a> -->
+        </div>
       </div>
     </section><!-- End Resume Section -->
 
@@ -676,7 +685,8 @@
           <div class="col-lg-6 col-md-4">
             <div class="contact-about">
               <h3>Lonely</h3>
-              <p>As mentioned you can use any of this ways to contact me though, I would recommend Linkedin or straight send me a mail.</p>
+              <p>As mentioned you can use any of this ways to contact me though, I would recommend Linkedin or straight
+                send me a mail.</p>
               <div class="social-links">
                 <!-- <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
                 <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
