--- a/index.html
+++ b/index.html
@@ -354,12 +354,12 @@
         <div class="downloadCV">
           <a href="../CV_Sergio_Martinez_Programador.pdf" download="CV_Sergio_Martinez_Programador" target="_blank">
             <img class="imgCvSpa"
-              src="https://img.shields.io/badge/Download-Full_CV_Sergio_M.C.(SPANISH)-1EABE2?style=for-the-badge&labelColor=181717"
+              src="https://img.shields.io/badge/Download-CV_Sergio_M.C.(SPANISH)-1EABE2?style=for-the-badge&labelColor=181717"
               alt="CV spanish download tag"></a>
-          <!-- <a  href="" download="CV_Sergio_Martinez_Developer" target="_blank">
+          <a  href="../CV_Sergio_Martinez_Developer.pdf" download="CV_Sergio_Martinez_Developer" target="_blank">
             <img class="imgCvEng"
-              src="https://img.shields.io/badge/Download-Full_CV_Sergio_M.C.(ENGLISH)-1EABE2?style=for-the-badge&labelColor=181717"
-              alt="CV english download tag"></a> -->
+              src="https://img.shields.io/badge/Download-CV_Sergio_M.C.(ENGLISH)-1EABE2?style=for-the-badge&labelColor=181717"
+              alt="CV english download tag"></a>
         </div>
       </div>
     </section><!-- End Resume Section -->
