--- a/index.html
+++ b/index.html
@@ -411,9 +411,9 @@
                 <p>Web</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://images.pexels.com/photos/436413/pexels-photo-436413.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Online video store"><i class="bx bx-plus"></i></a>
+                <a href="https://ssergiomc.github.io/videoStore80sP1/index.html" title="80s style online video store"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
