--- a/index.html
+++ b/index.html
@@ -405,10 +405,10 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="https://images.pexels.com/photos/436413/pexels-photo-436413.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Web 1</h4>
-                <p>Web</p>
+                <p>Web online video store</p>
               </div>
               <div class="portfolio-links">
                 <a href="https://images.pexels.com/photos/436413/pexels-photo-436413.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" data-gallery="portfolioGallery"
