--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <div class="section-title">
           <h2>Skills</h2>
           <!----- Skills ----->
-          <p>I have always felt attraction to the world of digitization and new technologies, and since university,
+          <p>I have always feel attracted to the world of digitization and new technologies, and since university,
             specifically programming languages. Therefore, I have decided to take the next step and embark on the
             adventure of expanding my skills in the field of web development, computer applications and data analysis
             (big data).</p>
