--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html">Lonely</a></h1>
+        <h1><a href="index.html">Portfolio - Sergio M.C.</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -369,7 +369,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Portfolio</h2>
+          <h2>Portfolio - My Projects</h2>
           <p>Find next my work, feel free to check and try, any comment or suggestion will be very appreciated. I hope
             you find it interesting as much as I do.</p>
           <h5>I am not afraid to leave my comfort zone and I strive to do my best in each project.</h5>
@@ -684,7 +684,7 @@
 
           <div class="col-lg-6 col-md-4">
             <div class="contact-about">
-              <h3>Lonely</h3>
+              <h3>Portfolio - Sergio M.C.</h3>
               <p>As mentioned you can use any of this ways to contact me though, I would recommend Linkedin or straight
                 send me a mail.</p>
               <div class="social-links">
