act fotos proyectos y dropdown links

--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#resume">Resume</a></li>
           <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Projects Direct Links</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
+              <li><a href="https://ssergiomc.github.io/videoStore80sP1/index.html" target="_blank">80's Video Store</a></li>
+              <li><a href="https://sergio-taskapp.herokuapp.com/" target="_blank">Task APP</a></li>
+              <li><a href="#">Drop Down 3</a></li>
+              <li><a href="#">Drop Down 4</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
                   <li><a href="#">Deep Drop Down 1</a></li>
@@ -75,11 +77,9 @@
                   <li><a href="#">Deep Drop Down 5</a></li>
                 </ul>
               </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
+          <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -370,7 +370,7 @@
 
         <div class="section-title">
           <h2>Portfolio - My Projects</h2>
-          <p>Find next my work, feel free to check and try, any comment or suggestion will be very appreciated. I hope
+          <p>Find next my work, take your time to visit and check, any comment or suggestion will be very appreciated. I hope
             you find it interesting as much as I do.</p>
           <h5>I am not afraid to leave my comfort zone and I strive to do my best in each project.</h5>
         </div>
@@ -390,30 +390,30 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/pexels_todolist-breakingpic-3299.jpg" class="img-fluid" alt="Post it pic">
               <div class="portfolio-info">
                 <h4>App 1</h4>
                 <p>Task App Manager</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
-                <a href="https://sergio-taskapp.herokuapp.com/" target="_blank" Task App/ Task Manager"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/pexels_todolist-breakingpic-3299.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="To do list App details"><i class="bx bx-plus"></i></a>
+                <a href="https://sergio-taskapp.herokuapp.com/" target="_blank" title="Visit Task App/ Task Manager"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="https://images.pexels.com/photos/436413/pexels-photo-436413.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/pexels_cinema-nathan-engel-436413.jpg" class="img-fluid" alt="Old styled cinema">
               <div class="portfolio-info">
                 <h4>Web 1</h4>
-                <p>Web online video store</p>
+                <p>Online video store</p>
               </div>
               <div class="portfolio-links">
-                <a href="https://images.pexels.com/photos/436413/pexels-photo-436413.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Online video store"><i class="bx bx-plus"></i></a>
-                <a href="https://ssergiomc.github.io/videoStore80sP1/index.html" target="_blank" title="80s style online video store"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/pexels_cinema-nathan-engel-436413.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Online video store details"><i class="bx bx-plus"></i></a>
+                <a href="https://ssergiomc.github.io/videoStore80sP1/index.html" target="_blank" title="Visit 80s style online video store"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -584,10 +584,8 @@
 
         <div class="section-title">
           <h2>Testimonials</h2>
-          <h5>My apologises but this section is still under construction.</h5>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <h5>My apologises but this section is still under construction and depends on your feedback.</h5>
+          <p>In case you want to appear in this section, please contact me by the methods described below. Feel free to leave me a comment and some time to manage and update. After some days your quote will appear here. Moreover if you are willing to fully contribute you could let me arrange a pic of you for the comment perfect display.</p>
         </div>
 
         <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
