added og elements in meta tags for shared links

--- a/index.html
+++ b/index.html
@@ -5,13 +5,26 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
+  <!-- Meta etiquetas generales -->
   <title>Sergio M.C. Portfolio</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta name="description" content="This is Sergio M.C. personal portfolio. Feel free to enter and check.">
+  <meta name="author" content="Sergio M.C.">
+  <meta name="keywords" content="Portfolio, Personal, Projects, technologies, html5, css3, Javascript, React">
+
+  <!-- Meta etiquetas redes sociales -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Sergio M.C. Personal Portfolio"/>
+  <meta property="og:site_name" content="Sergio M.C. Portfolio"/>
+  <meta property="og:description" content="This is Sergio M.C. personal portfolio. Feel free to enter and check. Leave a comment too if you are eager to do it."/>
+  <meta property="website:author" content="https://www.linkedin.com/in/sergio-martinez-cuesta"/>
+  <meta property="og:image" content="assets/img/pexels-photo-vietnam.jpeg"/>
+  <meta property="og:image:width" content="300"/>
+  <meta property="og:image:height" content="300"/>
+  <meta property="og:url" content="https://ssergiomc.github.io"/>
 
   <!-- Favicons -->
-  <link href="assets/img/favicon_S_blue.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/favicon_S_blue.png" rel="S icon">
+  <link href="assets/img/favicon_S_blue.png" rel="S-icon">
 
   <!-- Google Fonts -->
   <link
@@ -64,7 +77,8 @@
           <li><a class="nav-link scrollto" href="#portfolio">Portfolio</a></li>
           <li class="dropdown"><a href="#"><span>Projects Direct Links</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="https://ssergiomc.github.io/videoStore80sP1/index.html" target="_blank">80's Video Store</a></li>
+              <li><a href="https://ssergiomc.github.io/videoStore80sP1/index.html" target="_blank">80's Video Store</a>
+              </li>
               <li><a href="https://sergio-taskapp.herokuapp.com/" target="_blank">Task APP</a></li>
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
@@ -356,7 +370,7 @@
             <img class="imgCvSpa"
               src="https://img.shields.io/badge/Download_CV-Sergio_M.C.(SPANISH)-1EABE2?style=for-the-badge&labelColor=181717"
               alt="CV spanish download tag"></a>
-          <a  href="./cv/CV_Sergio_Martinez_Developer.pdf" download="CV_Sergio_Martinez_Developer" target="_blank">
+          <a href="./cv/CV_Sergio_Martinez_Developer.pdf" download="CV_Sergio_Martinez_Developer" target="_blank">
             <img class="imgCvEng"
               src="https://img.shields.io/badge/Download_CV-Sergio_M.C.(ENGLISH)-1EABE2?style=for-the-badge&labelColor=181717"
               alt="CV english download tag"></a>
@@ -370,7 +384,8 @@
 
         <div class="section-title">
           <h2>Portfolio - My Projects</h2>
-          <p>Find next my work, take your time to visit and check, any comment or suggestion will be very appreciated. I hope
+          <p>Find next my work, take your time to visit and check, any comment or suggestion will be very appreciated. I
+            hope
             you find it interesting as much as I do.</p>
           <h5>I am not afraid to leave my comfort zone and I strive to do my best in each project.</h5>
         </div>
@@ -398,14 +413,16 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/pexels_todolist-breakingpic-3299.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="To do list App details"><i class="bx bx-plus"></i></a>
-                <a href="https://sergio-taskapp.herokuapp.com/" target="_blank" title="Visit Task App/ Task Manager"><i class="bx bx-link"></i></a>
+                <a href="https://sergio-taskapp.herokuapp.com/" target="_blank" title="Visit Task App/ Task Manager"><i
+                    class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/pexels_cinema-nathan-engel-436413.jpg" class="img-fluid" alt="Old styled cinema">
+              <img src="assets/img/portfolio/pexels_cinema-nathan-engel-436413.jpg" class="img-fluid"
+                alt="Old styled cinema">
               <div class="portfolio-info">
                 <h4>Web 1</h4>
                 <p>Online video store</p>
@@ -413,7 +430,8 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/pexels_cinema-nathan-engel-436413.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Online video store details"><i class="bx bx-plus"></i></a>
-                <a href="https://ssergiomc.github.io/videoStore80sP1/index.html" target="_blank" title="Visit 80s style online video store"><i class="bx bx-link"></i></a>
+                <a href="https://ssergiomc.github.io/videoStore80sP1/index.html" target="_blank"
+                  title="Visit 80s style online video store"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -585,7 +603,10 @@
         <div class="section-title">
           <h2>Testimonials</h2>
           <h5>My apologises but this section is still under construction and depends on your feedback.</h5>
-          <p>In case you want to appear in this section, please contact me by the methods described below. Feel free to leave me a comment and some time to manage and update. After some days your quote will appear here. Moreover if you are willing to fully contribute you could let me arrange a pic of you for the comment perfect display.</p>
+          <p>In case you want to appear in this section, please contact me by the methods described below. Feel free to
+            leave me a comment and some time to manage and update. After some days your quote will appear here. Moreover
+            if you are willing to fully contribute you could let me arrange a pic of you for the comment perfect
+            display.</p>
         </div>
 
         <div class="testimonials-slider swiper-container" data-aos="fade-up" data-aos-delay="100">
