--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <meta name="description" content="This is Sergio M.C. personal portfolio. Feel free to enter and check.">
   <meta name="author" content="Sergio M.C.">
   <meta name="keywords" content="Portfolio, Personal, Projects, technologies, html5, css3, Javascript, React">
+  <meta name="image" content="../img/pexels-photo-vietnam.jpeg">
+  <meta property="image:width" content="300"/>
+  <meta property="image:height" content="300"/>
 
   <!-- Meta etiquetas redes sociales -->
   <meta property="og:type" content="website" />
@@ -17,7 +20,7 @@
   <meta property="og:site_name" content="Sergio M.C. Portfolio"/>
   <meta property="og:description" content="This is Sergio M.C. personal portfolio. Feel free to enter and check. Leave a comment too if you are eager to do it."/>
   <meta property="website:author" content="https://www.linkedin.com/in/sergio-martinez-cuesta"/>
-  <meta property="og:image" content="assets/img/pexels-photo-vietnam.jpeg"/>
+  <meta property="og:image" content="../img/pexels-photo-vietnam.jpeg"/>
   <meta property="og:image:width" content="300"/>
   <meta property="og:image:height" content="300"/>
   <meta property="og:url" content="https://ssergiomc.github.io"/>
