--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta property="og:site_name" content="Sergio M.C. Portfolio"/>
   <meta property="og:description" content="This is Sergio M.C. personal portfolio. Feel free to enter and check. Leave a comment too if you are eager to do it."/>
   <meta property="website:author" content="https://www.linkedin.com/in/sergio-martinez-cuesta"/>
-  <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+  <meta property="og:image" content="assets/pexels-photo-vietnam.jpeg">
 
   <!-- Favicons -->
   <link href="assets/img/favicon_S_blue.png" rel="S icon">
