last update ogtags

--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
   <!-- Meta etiquetas generales -->
   <title>Sergio M.C. Portfolio</title>
   <meta name="description"
-    content="[Click and welcome to my personal portfolio. Feel free to enter and check. Leave a comment too if you are eager to do it.]">
+    content="Click and welcome to my personal portfolio. Feel free to enter and check. Leave a comment too if you are eager to do it.">
   <meta name="author" content="Sergio M.C.">
   <meta name="keywords" content="Portfolio, Personal, Projects, technologies, html5, css3, Javascript, React">
-  <meta name="image" content="https://ssergiomc.github.io/assets/img/pexels-photo-vietnam.jpeg">
+  <meta name="image" content="assets/pexels-photo-vietnam.jpeg">
 
   <!-- Meta etiquetas Open Graph / Facebook -->
   <meta property="og:title" content="Sergio M.C. Portfolio" />
-  <meta property="og:type" content="[website]" />
+  <meta property="og:type" content="website" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Sergio M.C. Personal Portfolio" />
   <meta property="og:url" content="https://ssergiomc.github.io" />
   <meta property="og:description"
-    content="[Click and welcome to my personal portfolio. Feel free to enter and check. Leave a comment too if you are eager to do it.]" />
+    content="Click and welcome to my personal portfolio. Feel free to enter and check. Leave a comment too if you are eager to do it."/>
   <meta property="website:author" content="https://www.linkedin.com/in/sergio-martinez-cuesta" />
   <meta property="og:image" content="https://ssergiomc.github.io/assets/img/pexels-photo-vietnam.jpeg"/>
   <meta property="og:image:secure_url" content="https://ssergiomc.github.io/assets/img/pexels-photo-vietnam.jpeg"/>
@@ -29,8 +29,8 @@
   <meta property="og:image:height" content="300" />
 
   <!-- Favicons -->
-  <link href="assets/img/favicon_S.png" rel="favicon icon">
-  <link href="assets/img/favicon_S_blue.png" rel="s-blue-icon">
+  <link href="assets/img/favicon_S_blue.png" rel="S icon">
+  <link href="assets/img/favicon_S.png" rel="Favicon S">
 
   <!-- Google Fonts -->
   <link
