--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   <meta property="og:site_name" content="Sergio M.C. Personal Portfolio" />
   <meta property="og:url" content="https://ssergiomc.github.io" />
   <meta property="og:description"
-    content="Click and welcome to my personal portfolio. Feel free to enter and check. Leave a comment too if you are eager to do it."/>
+    content="Click and welcome to my personal portfolio. Feel free to enter and check. Leave a comment too if you are eager to do it." />
   <meta property="website:author" content="https://www.linkedin.com/in/sergio-martinez-cuesta" />
-  <meta property="og:image" content="https://ssergiomc.github.io/assets/img/pexels-photo-vietnam.jpeg"/>
-  <meta property="og:image:secure_url" content="https://ssergiomc.github.io/assets/img/pexels-photo-vietnam.jpeg"/>
+  <meta property="og:image" content="https://ssergiomc.github.io/assets/img/pexels-photo-vietnam.jpeg" />
+  <meta property="og:image:secure_url" content="https://ssergiomc.github.io/assets/img/pexels-photo-vietnam.jpeg" />
   <meta property="og:image:alt" content="Personal Portfolio. Fresh shiny green Vietnam panoramic view" />
   <meta property="og:image:width" content="400" />
   <meta property="og:image:height" content="300" />
@@ -219,6 +219,12 @@
               <img
                 src="https://img.shields.io/badge/Chart.js-FF6384?style=for-the-badge&logo=Chart.js&logoColor=white&labelColor=101010"
                 alt="chart.js icon">
+              <img
+                src="https://img.shields.io/badge/Next.js-000000?style=for-the-badge&logo=Next.js&logoColor=white&labelColor=101010"
+                alt="Next.js icon">
+              <img
+                src="https://img.shields.io/badge/Sass-CC6699?style=for-the-badge&logo=Sass&logoColor=white&labelColor=101010"
+                alt="Sass icon">
             </div>
           </div>
 
