include sass portfolio pic and project

--- a/index.html
+++ b/index.html
@@ -486,9 +486,10 @@
                 <p>Web</p>
               </div>
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery"
+                <a href="assets/img/portfolio/SassPortf.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://ssergiomc.github.io/tut_portfolio_sass/index.html" 
+                  title="Visit Portfolio example with Sass"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
