include target and description

--- a/index.html
+++ b/index.html
@@ -483,12 +483,12 @@
               <img src="assets/img/portfolio/SassPortf.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
                 <h4>Web 2</h4>
-                <p>Web</p>
+                <p>Personal Portfolio example with Sass</p>
               </div>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/SassPortf.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
-                <a href="https://ssergiomc.github.io/tut_portfolio_sass/index.html" 
+                <a href="https://ssergiomc.github.io/tut_portfolio_sass/index.html" target="_blank"
                   title="Visit Portfolio example with Sass"><i class="bx bx-link"></i></a>
               </div>
             </div>
