--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
               </div>
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/SassPortf.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="Personal Portfolio example with Sass"><i class="bx bx-plus"></i></a>
                 <a href="https://ssergiomc.github.io/tut_portfolio_sass/index.html" target="_blank"
                   title="Visit Portfolio example with Sass"><i class="bx bx-link"></i></a>
               </div>
